@@ -40,7 +40,7 @@ the messages, and forward them to connected clients.
 
 =head1 REVISION
 
-$Id: event_broker.pl,v 1.112 2008/04/05 21:45:31 aa Exp $
+$Id: event_broker.pl,v 1.113 2008/04/06 21:57:25 aa Exp $
 
 =head1 AUTHORS
 
@@ -57,7 +57,7 @@ Copyright (C) 2005 University of Exeter. All Rights Reserved.
 #  Version number - do this before anything else so that we dont have to 
 #  wait for all the modules to load - very quick
 BEGIN {
-  $VERSION = sprintf "%d.%d", q$Revision: 1.112 $ =~ /(\d+)\.(\d+)/;
+  $VERSION = sprintf "%d.%d", q$Revision: 1.113 $ =~ /(\d+)\.(\d+)/;
  
   #  Check for version number request - do this before real options handling
   foreach (@ARGV) {
@@ -292,6 +292,8 @@ use Config::User;
 use Time::localtime;
 use XML::RSS;
 use Net::Twitter;
+use WWW::Shorten::TinyURL;
+use WWW::Shorten 'TinyURL';
 
 #
 # Networking modules
@@ -968,22 +970,33 @@ my $incoming_callback = sub {
      # Tweet to Twitter
      # ----------------
      
-      $log->debug( "Twittering event to twitter.com" );
-      my $twit = new Net::Twitter( username => "eSTAR_Project", 
-      				   password => "twitter*User" );
+    $log->debug( "Twittering event to twitter.com" );
+    my $twit = new Net::Twitter( username => "eSTAR_Project", 
+   				 password => "twitter*User" );
 
-      my $url = "http://$path/$path[$#path].xml";
-      $url =~ s/\/docs//;
-      my $twit_status = "Event message $id at $url";     
-      my $twit_result;
-      eval { $twit_result = $twit->update( $twit_status ); };
-      if( $@ || !defined $twit_result ) {
-        my $error = "$@";
-	$log->error( "Error: Problem updating twitter.com with new status" );
-	$log->error( "Error: $error" ) if defined $error;
-     } else {
-        $log->debug( "Updated status on twitter.com" );	
-     }
+    my $url = "http://$path/$path[$#path].xml";
+    $url =~ s/\/docs//;
+    my $short_url;
+    $log->debug( "Passing $url to tinyurl.com" );
+    eval { $short_url = makeashorterlink($url); };
+    if ( $@ || !defined $short_url ) {
+       $short_url = $url;
+       my $error = "$@";
+       $log->error( "Error: Call to tinyurl.com failed" );
+       $log->error( "Error: $error" ) if defined $error;
+    } else {
+      $log->debug( "Got $short_url back from tinyurl.com" );
+    }  
+    my $twit_status = "Event message $id at $short_url";  
+    my $twit_result;
+    eval { $twit_result = $twit->update( $twit_status ); };
+    if( $@ || !defined $twit_result ) {
+      my $error = "$@";
+      $log->error( "Error: Problem updating twitter.com with new status" );
+      $log->error( "Error: $error" ) if defined $error;
+   } else {
+      $log->debug( "Updated status on twitter.com" ); 
+   }
      
      # Clean up the alert.log file
      # ---------------------------
@@ -1898,6 +1911,9 @@ sub kill_agent {
 # T I M E   A T   T H E   B A R  -------------------------------------------
 
 # $Log: event_broker.pl,v $
+# Revision 1.113  2008/04/06 21:57:25  aa
+# Added tinyurl.com encoding
+#
 # Revision 1.112  2008/04/05 21:45:31  aa
 # bug fixes
 #
